<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    android:isScrollContainer="false"
    tools:context=".InfoActivity">

    <LinearLayout
        android:id="@+id/Top_layout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="#232323"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#232323"
            android:contentDescription="@string/go_back"
            app:srcCompat="@drawable/go_back"
            app:tint="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/Author2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/Author"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Center_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#2E2D2D"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Top_layout">

        <TextView
            android:id="@+id/info_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/info_line1"
            android:textColor="#40E0D0"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/info_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/info_line2"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/info_line3"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_line4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_line4"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_line5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_line5"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_line6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:text="@string/info_line6"
            android:textColor="#40E0D0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_line7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_line7"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_line8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/info_line8"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_line9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_line9"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_line10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/info_line10"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>