<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/TopLayout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="#232323"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Author"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/Top_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_live_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/text_live_currency"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/live_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/live_currency"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/info_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#232323"
            android:contentDescription="@string/info_page"
            app:srcCompat="@drawable/info"
            app:tint="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CenterLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#232323"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/Keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopLayout">

        <LinearLayout
            android:id="@+id/Value1_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="#2E2D2D"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/value1_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/flag1"
                app:srcCompat="@drawable/usa_flag" />

            <LinearLayout
                android:id="@+id/Value1_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/value1_name"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <Spinner
                android:id="@+id/value1_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#696969"
                android:gravity="end" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/change_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0"
            android:background="#232323"
            android:contentDescription="@string/change_position"
            app:srcCompat="@drawable/change_position"
            app:tint="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/Value2_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="#2E2D2D"
            android:gravity="center_vertical|end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/value2_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flag2"
                app:srcCompat="@drawable/russia_flag" />

            <LinearLayout
                android:id="@+id/Value2_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/value2_name"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <Spinner
                android:id="@+id/value2_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#696969"
                android:gravity="end" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/Keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#232323"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/keyboard_line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/key_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_7"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_8"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_9"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

        </TableRow>

        <TableRow
            android:id="@+id/keyboard_line2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/key_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_4"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_5"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_6"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

        </TableRow>

        <TableRow
            android:id="@+id/keyboard_line3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/key_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_3"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

        </TableRow>

        <TableRow
            android:id="@+id/keyboard_line4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/key_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_dot"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#848484" />

            <Button
                android:id="@+id/key_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_0"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#4F4F4F" />

            <Button
                android:id="@+id/key_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="100"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/key_clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#FF8C00" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>